--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
 
     /* NEUTRAL COLOR */
     --Dark-gray: hsla(0, 0%, 59%, 0.4);
+    --Black-shadow: hsla(0, 0%, 0%, 0.14);
     --White: hsl(0, 0%, 100%);
     /* FONT FAMILY */
     --ff: 'Kumbh Sans', sans-serif;
@@ -38,6 +39,7 @@ main {
     background-color: var(--White);
     border-radius: 12px;
     overflow: hidden;
+    box-shadow: 0px 12px 21px 6px var(--Black-shadow);
 }
 
 .profile-card__main {
